pio and multicore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,20 +10,4 @@ set(CMAKE_CXX_STANDARD 17)
 # Initialize the SDK
 pico_sdk_init()
 
-
-add_executable(dds-sweeper
-        dds-sweeper.c
-        )
-
-target_link_libraries(dds-sweeper 
-        pico_stdlib
-        hardware_spi
-        hardware_clocks
-        )
-
-# enable UART output and disable Serial USB
-pico_enable_stdio_usb(dds-sweeper 0)
-pico_enable_stdio_uart(dds-sweeper 1)
-
-# create map/bin/hex/uf2 file in addition to ELF.
-pico_add_extra_outputs(dds-sweeper)
+add_subdirectory(ddssweeper)
