added full kicad project

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ build/ddssweeper/*
 # board gerber files
 dds-sweeper-board/*
 !dds-sweeper-board/gerbers/*
+!dds-sweeper-board/*.zip
 
 # ignore jupyter nb files
 testing/.ipynb_checkpoints/*
