Unzip KiCAD project, track individual files.
Also updates project to KiCAD 7.0, made some minor tweaks to layout
and schematic.

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,10 @@ build/ddssweeper/*
 
 .vscode/
 
-# board gerber files
-dds-sweeper-board/*
-!dds-sweeper-board/gerbers/*
-!dds-sweeper-board/*.zip
+# kicad extras
+fp-info-cache
+dds-sweeper-board/*-backups/*
+*.lck
 
 # ignore jupyter nb files
 testing/.ipynb_checkpoints/*
