--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,10 +1,10 @@
 name: Build firmware
 
 on:
-  create:
+  push:
     tags:
       - '[0-9]+\.[0-9]+\.[0-9]+*'
-  pull-request:
+  pull_request:
     types: [opened, reopened, synchronize, ready_for_review]
 
 
