--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
     name: Build firmware
     steps:
       - name: Check out this repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Build Docker image
         run: docker compose build --pull --build-arg APT_MIRROR="http://azure.archive.ubuntu.com/ubuntu/"
@@ -29,8 +29,8 @@ jobs:
           path: build/dds-sweeper/*.uf2
 
       - name: Create release
-        if: ${{ github.event.ref_type == 'tag' }}
-        uses: "marvinpinto/action-automatic-release@latest"
+        if: (github.event_name == 'push' && contains(github.ref, '/tags'))
+        uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
