--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,6 +47,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           prerelease: false
+          generate_release_notes: true
           files: |
             LICENSE
             dds-sweeper.uf2
