--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
         run: docker compose build --pull --build-arg APT_MIRROR="http://azure.archive.ubuntu.com/ubuntu/"
 
       - name: Run docker container
-        run: docker compose up
+        run: docker compose up --exit-code-from buildfirmware
 
       - name: Upload firmware as artifact
         uses: actions/upload-artifact@v4
