Fixed FROM as case mismatch docker complains about - checked and nothing breaks

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,7 +15,7 @@ RUN \
     apt install -y cmake gcc-arm-none-eabi libnewlib-arm-none-eabi build-essential
 
 # Install Pico SDK into a new stage
-FROM base as buildtools
+FROM base AS buildtools
 
 RUN \
     mkdir -p /pico/ && \
