Add nominal support for RP2350, which leverages its larger SRAM
Bumps Pico1 array size from 243kB to 244kB
Pico2 array size is nominally 500kB

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # ignore the build directory
-build/*
-!build/ddssweeper/
-build/ddssweeper/*
-!build/ddssweeper/dds-sweeper.uf2
+build*/*
 
 .vscode/
 .venv
