--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,18 +22,15 @@ jobs:
       - name: Run docker container
         run: docker compose up
 
-      - name: Check for build success
-        shell: bash
-        run: |
-          if [[ ! -f "build_rp2040/dds-sweeper/dds-sweeper_rp2040.uf2"]]; then
-            echo "RP2040 firmware failed to build"
-            exit 1
-          fi
-
-          if [[ ! -f "build_rp2350/dds-sweeper/dds-sweeper_rp2350.uf2"]]; then
-            echo "RP2350 firmware failed to build"
-            exit 1
-          fi
+      - name: Check for build success of all services
+        # https://stackoverflow.com/questions/29568352/using-docker-compose-with-ci-how-to-deal-with-exit-codes-and-daemonized-linked
+        run: >
+          docker-compose ps -aq |
+          xargs docker inspect -f '{{ .State.ExitCode }}' |
+          grep -v '^0' |
+          wc -l |
+          tr -d ' '
+          || exit 1
 
       - name: Upload firmwares as artifact
         uses: actions/upload-artifact@v4
